# Huggler-portfolio

./: .gitignore  README.md
.github/workflows/: deploy.yml
portfolio-site/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
portfolio-site/.github/workflows/: deploy.yml
portfolio-site/public/: CNAME  robots.txt
portfolio-site/src/: site.config.ts
portfolio-site/src/components/: FeaturedProjectCard.astro  Footer.astro  MermaidBlock.astro  Nav.astro  ProjectCard.astro  StackPill.astro  Stat.astro  ThemeToggle.astro
portfolio-site/src/components/fraud/: AnomalyPatternCards.tsx  FraudPipelineCanvas.tsx  ThroughputChart.tsx  TransactionFeed.tsx
portfolio-site/src/components/lakehouse/: AirflowDagViewer.tsx  DataQualityScorecard.tsx  DbtLineagePreview.tsx  LayerDrillDown.tsx  MedallionDiagram.tsx
portfolio-site/src/components/shared/: GitHubBadge.astro  PlayPauseButton.tsx  ProjectPreviewCard.astro  SectionHeader.astro  StackPills.tsx
portfolio-site/src/content/: config.ts
portfolio-site/src/data/: fraud-transactions.json  lakehouse-samples.json  sql-optimizations.json
portfolio-site/src/hooks/: useReducedMotion.ts
portfolio-site/src/layouts/: BaseLayout.astro
portfolio-site/src/pages/: about.astro  contact.astro  index.astro  resume.astro
portfolio-site/src/styles/: demos.css  global.css
project-ai-sql-optimizer/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
project-ai-sql-optimizer/.github/workflows/: ci.yml
project-ai-sql-optimizer/corpus/: ground_truth.yaml
project-ai-sql-optimizer/corpus/queries/: 01_join_optimization.sql  02_aggregation_rewrite.sql  03_cte_flattening.sql  04_partition_pruning.sql  05_broadcast_join.sql  06.sql  07.sql  08.sql  09.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  20.sql  21.sql  22.sql  23.sql  24.sql  25.sql  26.sql  27.sql  28.sql  29.sql  30.sql  31.sql  32.sql  33.sql  34.sql  35.sql  36.sql  37.sql  38.sql  39.sql  40.sql  (+10 more)
project-ai-sql-optimizer/docs/: methodology.md
project-ai-sql-optimizer/src/sql_optimizer/: __init__.py  analyzer.py  benchmark.py  cli.py  client.py
project-ai-sql-optimizer/src/sql_optimizer/prompts/: optimizer_prompt.md
project-ai-sql-optimizer/tests/: test_analyzer.py  test_benchmark.py  test_cli.py  test_client.py
project-fraud-signals/: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
project-fraud-signals/.github/workflows/: ci.yml
project-fraud-signals/dbt_fraud/: dbt_project.yml  profiles.yml.example
project-fraud-signals/dbt_fraud/models/marts/: dim_account.sql  fct_transactions.sql  schema.yml
project-fraud-signals/dbt_fraud/models/staging/: schema.yml  sources.yml  stg_transactions.sql
project-fraud-signals/docs/: architecture.md
project-fraud-signals/src/anomaly/: __init__.py  detect.py
project-fraud-signals/src/dashboard/: __init__.py  app.py
project-fraud-signals/src/producer/: __init__.py  generate.py
project-fraud-signals/src/streaming/: __init__.py  consumer.py
project-fraud-signals/tests/: test_anomaly.py  test_producer.py  test_streaming.py
project-telecom-lakehouse/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
project-telecom-lakehouse/.github/workflows/: ci.yml
project-telecom-lakehouse/dags/: build_gold_marts.py  ingest_cdr_bronze.py  transform_silver.py
project-telecom-lakehouse/data_generator/: __init__.py  generate_cdrs.py
project-telecom-lakehouse/dbt_telecom/: dbt_project.yml  profiles.yml.example
project-telecom-lakehouse/dbt_telecom/models/bronze/: br_account_register.sql  br_cdr.sql  schema.yml  sources.yml
project-telecom-lakehouse/dbt_telecom/models/gold/: arpu_monthly.sql  churn_signals.sql  revenue_by_market.sql  schema.yml
project-telecom-lakehouse/dbt_telecom/models/silver/: schema.yml  sl_account_daily.sql  sl_cdr_clean.sql  sl_revenue_event.sql
project-telecom-lakehouse/docs/: architecture.md
project-telecom-lakehouse/great_expectations/: great_expectations.yml
project-telecom-lakehouse/great_expectations/expectations/: cdr_bronze_suite.json
project-telecom-lakehouse/src/lakehouse/: __init__.py  transform.py
project-telecom-lakehouse/terraform/: README.md  glue.tf  main.tf  s3.tf
project-telecom-lakehouse/tests/: test_dags.py  test_generator.py  test_transform.py
(+19 files in other folders)
