[project]
name = "sql-optimizer"
version = "0.1.0"
description = "CLI that uses Claude to suggest Spark/Snowflake SQL rewrites"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Huggler" }]
keywords = ["sql", "claude", "anthropic", "optimizer", "spark", "snowflake"]

dependencies = [
    "anthropic>=0.40,<1.0",
    "typer>=0.12",
    "sqlglot>=25.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
sql-optimizer = "sql_optimizer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_optimizer"]

[tool.hatch.build.targets.wheel.sources]
"src/sql_optimizer" = "sql_optimizer"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF",
]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]
