[project]
name = "fraud-signals"
version = "0.1.0"
description = "Real-time fraud detection: Kafka -> Spark Structured Streaming -> Delta -> dbt -> Streamlit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Huggler" }]
keywords = ["data-engineering", "kafka", "spark", "streaming", "delta", "fraud-detection"]

dependencies = [
    "pydantic>=2.7",
    "faker>=25.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
streaming = [
    "pyspark>=3.5,<4.0",
    "delta-spark>=3.2",
    "kafka-python>=2.0",
]
dashboard = [
    "streamlit>=1.36",
    "pydeck>=0.9",
]
dbt = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
fraud-producer = "producer.generate:app"
fraud-detect = "anomaly.detect:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/producer", "src/streaming", "src/anomaly", "src/dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF",
]
# B008: Typer commands intentionally use Option/Argument calls in defaults.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]
